--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "lucide-react": "^0.559.0",
-    "xlsx": "^0.18.5"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "lucide-react": "0.263.1",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
